--- a/doc/version.texi
+++ b/doc/version.texi
@@ -1,4 +1,4 @@
-@set UPDATED 12 September 2021
-@set UPDATED-MONTH September 2021
-@set EDITION 3.8.2
-@set VERSION 3.8.2
+@set UPDATED 23 May 2023
+@set UPDATED-MONTH May 2023
+@set EDITION UNKNOWN
+@set VERSION UNKNOWN
